--- a/src/app/estimate/estimate.component.html
+++ b/src/app/estimate/estimate.component.html
@@ -2,11 +2,11 @@
     <div class="dmRespColsWrapper">
         <div class="large-12 medium-12 small-12 dmRespCol p-5">
             <div class="dmNewParagraph">
-                <h3>Request an Estimate</h3>
+                <h3 class="text-center">Request an Estimate</h3>
             </div>
             <div class="dmform">
                 <form method="post">
-                    <p>Fill out this short form to request a free estimate.</p>
+                    <p class="text-center">Fill out this short form to request a free estimate.</p>
                     <div class="inputs name">
                         <label for="name">Name:</label>
                         <input type="text" name="name" id="name" required>
