--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,10 +7,10 @@
     <div class="row">
       <div class="col-4 d-flex justify-content-start align-items-center">
         <!-- Social Icons -->
-        <a href="https://instagram.com" target="_blank" class="text-light ">
+        <a href="https://www.instagram.com/kingshighwayasphalt/" target="_blank" class="text-light ">
             <a class="links" href="#"><i class="bi bi-instagram social-logos"></i></a>
         </a>
-        <a href="https://facebook.com" target="_blank" class="text-light">
+        <a href="https://www.facebook.com/Kingshighwayasphalt/" target="_blank" class="text-light">
             <a class="links" href="#"><i class="bi bi-facebook social-logos"></i></a>
         </a>
       </div>
@@ -40,7 +40,7 @@
     </div>
 
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2 link-dark">Home</a></li>
+        <li><a (click)="route('home')" class="nav-link px-2 link-dark">Home</a></li>
         <li><a (click)="route('asphalt-services')" class="nav-link px-2 link-dark">Asphalt Services</a></li>
         <li><a (click)="route('hardscaping-services')" class="nav-link px-2 link-dark">Hardscaping Services</a></li>
         <!-- <li class="nav-item dropdown">
