--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -31,7 +31,7 @@
 
     <div class="d-flex justify-content-center align-items-center mt-5">
         <ul class="list-unstyled d-flex">
-            <li class="ms-3"><a class="icon-link" target="_blank" href="https://www.instagram.com/kingshighwayasphalt"><i class="icon fa-brands fa-instagram"></i></a></li>
+            <li class="ms-3"><a class="icon-link" target="_blank" href="https://www.instagram.com/kingshighwayasphalt/"><i class="icon fa-brands fa-instagram"></i></a></li>
             <li class="ms-3"><a class="icon-link" target="_blank" href="https://www.facebook.com/Kingshighwayasphalt/"><i class="icon fa-brands fa-facebook"></i></a></li>
         </ul>
     </div>
