image url remove leading /

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<app-hero title="About Kings Highway Asphalt" imageUrl="../../assets/about.webp"></app-hero>
+<app-hero title="About Kings Highway Asphalt" imageUrl="assets/about.webp"></app-hero>
 
 <div class="container pt-5">
     <div class="row">
