--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,4 +1,4 @@
-<app-hero title="Kings Highway Asphalt Gallery" imageUrl="../../assets/gallery.webp"></app-hero>
+<app-hero title="Kings Highway Asphalt Gallery" imageUrl="assets/gallery.webp"></app-hero>
 
 <div class="container mt-4">
     <div class="row text-center">
