--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -33,7 +33,7 @@
     <div class="logo-container row">
         <div class="col request-appt-container">
         </div>
-        <div class="col" (click)="route('home')"><img class="col" id="logo" src="../../assets/king-logo.webp" alt=""></div>
+        <div class="col" (click)="route('home')"><img class="col" id="logo" src="assets/king-logo.webp" alt=""></div>
         <div class="col request-appt-container">
 
         </div>
