--- a/src/app/reviews/reviews.component.html
+++ b/src/app/reviews/reviews.component.html
@@ -1,4 +1,4 @@
-<app-hero title="Kings Highway Asphalt Customer Reviews" imageUrl="../../assets/roller2.webp"></app-hero>
+<app-hero title="Kings Highway Asphalt Customer Reviews" imageUrl="assets/roller2.webp"></app-hero>
 
 <div class="clearfix graph-star-rating">
     <h5 class="mb-0 mb-4">Ratings and Reviews</h5>
