--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -28,7 +28,7 @@
 }
 
 .hero-image {
-    background-image: url('../../assets/hero-image.webp');
+    background-image: url('/assets/hero-image.webp');
     height: 400px;
     background-size: cover;
     background-position: center center;
