--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -104,7 +104,7 @@
 }
 
 .hero-image {
-  background-image: url('../../assets/hero-image.webp');
+  background-image: url('/assets/hero-image.webp');
   height: 600px;
   background-size: cover;
   background-position: center center;
