--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<app-hero title="Contact Kings Highway Asphalt" imageUrl="../../assets/contact.webp"></app-hero>
+<app-hero title="Contact Kings Highway Asphalt" imageUrl="assets/contact.webp"></app-hero>
 <!-- contact.component.html -->
 <div class="container">
     <div class="row">
