--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <!-- <app-hero title="Exceptional Asphalt Paving Services" imageUrl="assets/hero-image.webp"></app-hero> -->
 
-<div class="text-center bg-image rounded-3 hero-image">
+<div class="text-center bg-image rounded-3 hero-image" style.background-image="assets/hero-image.webp">
   <div class="mask">
       <div class="d-flex justify-content-center align-items-center h-100">
           <div class="text-white m-5">
